@@ -29,7 +29,13 @@
 
         public object Evaluate(IContext context)
         {
-            return new Function(this.parameterNames, this.body, context);
+            object value = new Function(this.parameterNames, this.body, context);
+            if (this.name != null)
+            {
+                context.DefineVariable(this.name);
+                context.SetValue(this.name, value);
+            }
+            return value;
         }
     }
 }
